# django-hstore-field

./: README.md  main.py  pyproject.toml
.github/workflows/: CI.yaml
tests/: conftest.py  test_field.py  test_hstore_field.py
tests/cat/: admin.py  models.py
tests/cat/migrations/: 0001_initial.py
